tests/gabc-dump/should-fail/unclosed-over-ledger-2.gabc
name: unclosed over-staff ledger line (2);
%%
(c4) g(g) h(h[oll:2mm{2mm]) i(i[oll:2mm{2mm])
